--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -6,6 +6,10 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/BattleGround.BattleGround
+EditorStartupMap=/Game/BattleGround.BattleGround
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -16,6 +20,7 @@ TriangleMeshTriangleMinAreaThreshold=5.000000
 bEnableAsyncScene=False
 bEnableShapeSharing=False
 bEnablePCM=False
+bEnableStabilization=False
 bWarnMissingLocks=True
 bEnable2DPhysics=False
 LockedAxis=Invalid
@@ -44,7 +49,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 
-[/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BattleGround.BattleGround
-EditorStartupMap=/Game/BattleGround.BattleGround
 
