--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BattleGround.BattleGround
-EditorStartupMap=/Game/BattleGround.BattleGround
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/BattleGround.BattleGround
 GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
